chore(fmt): apply rustfmt across workspace
fix(clippy): inline format args; clean logging; remove unused imports

feat(quic): DoH over QUIC stream POC (Cloudflare JSON)

ci: add cross-platform lint/build/test workflow

docs: update todo.md with POC and CI status

--- a/crates/xeonvpn-quic/Cargo.toml
+++ b/crates/xeonvpn-quic/Cargo.toml
@@ -11,3 +11,5 @@ tracing = "0.1"
 rustls = "0.21"
 rcgen = "0.12"
 futures-util = { version = "0.3", features = ["io"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+urlencoding = "2"
