--- a/crates/xeonvpn-net/Cargo.toml
+++ b/crates/xeonvpn-net/Cargo.toml
@@ -5,3 +5,8 @@ edition = "2021"
 
 [dependencies]
 xeonvpn-core = { path = "../xeonvpn-core" }
+ 
+ [target.'cfg(target_os = "linux")'.dependencies]
+ tun = { version = "0.6", features = ["async"] }
+ tokio = { version = "1", features = ["full"] }
+ tracing = "0.1"
